--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "solc": "^0.4.19"
+    "ganache-cli": "^6.12.2",
+    "mocha": "^8.2.1",
+    "solc": "^0.4.19",
+    "web3": "^1.3.3"
   }
 }
